# quick-xmltodict

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  benchmarking.py  pyproject.toml  quick_xmltodict.pyi  renovate.json
.github/workflows/: CI.yml
profiling/: Cargo.toml  README.md
src/: lib.rs
tests/: test_parse.py
tests/data/: forecast.json  forecast.xml  time-series.json  time-series.xml
